--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,8 @@
 /*Slider Variables*/
 
 $bg-color: #ffffff;
-$slider-fill: #3F93CB;
-$slider-fill-inset: #464242;
-$pointer: #808080;
-$pointer-active: #404B96;
-$pointer-hover: #000;
+$slider-fill: #E74C3C;
+$slider-fill-inset: darken(#E74C3C, 15%);
+$pointer: #E74C3C;
+$pointer-active: darken(#E74C3C, 20%);
+$pointer-hover: lighten(#E74C3C, 10%);
