--- a/src/styles/angular-slider.scss
+++ b/src/styles/angular-slider.scss
@@ -5,90 +5,88 @@ body {
 	background-color: $bg-color;
 }
 
-.slider {
-	display: inline-block;
-	position: relative;
-	height: 14px;
-	width: 300px;
-	margin: 25px 5px 25px 5px;
-	vertical-align: middle;
-}
-
-.slider {
-	span {
-		white-space: nowrap;
-		position: absolute;
+.pretty-slider-container {
+	width: 19em;
+	margin: 0 auto;
+	p {
+		float: right;
+		font-weight: bold;
+		font-family: Helvetica, sans-serif;
+		font-size: 12px;
+		color: $slider-fill;
+	}
+	.slider {
 		display: inline-block;
-	}
-
-	span.base {
-		width: 100%;
-		height: 100%;
-		padding: 0;
-	}
-
-	span.bar {
-		width: 100%;
-		height: 100%;
-		z-index: 0;
-		@include border-radius(1em);
-		background: #ffffff;
-		-webkit-box-shadow: inset 0px 0px 2px $slider-fill-inset;
-		box-shadow: inset 0px 0px 2px $slider-fill-inset;
-	}
-
-	span.fill {
-		height: 100%;
-		z-index: 0;
-		@include border-radius(1em);
-		@include linear-gradient($slider-fill,$slider-fill);
-		-webkit-box-shadow: inset 1px 1px 1px $slider-fill-inset;
-		box-shadow: inset 1px 1px 1px $slider-fill-inset;
-	}
-
-	span.pointer {
-		cursor: pointer;
-		width: 28px;
-		height: 28px;
-		top: -9px;
-		background-color: #fff;
-		border: 1px solid #000;
-		z-index: 2;
-		@include border-radius(1em);
-	}
-
-	span.pointer:after {
-		content: '';
-		background-color: $pointer;
-		width: 12px;
-		height: 12px;
-		position: absolute;
-		top: 8px;
-		left: 8px;
-		@include border-radius(1em);
-	}
-
-	span.pointer:hover:after {
-		background-color: $pointer-hover;
-	}
-
-	span.pointer.active:after {
-		background-color: $pointer-active;
-	}
-
-	span.bubble {
-		cursor: default;
-		top: -22px;
-		padding: 1px 3px 1px 3px;
-		font-size: 0.7em;
-		font-family: sans-serif;
-	}
-
-	span.bubble.selection {
-		top: 15px;
-	}
-
-	span.bubble.limit {
-		color: #808080;
+		position: relative;
+		height: 14px;
+		width: 300px;
+		margin: 0;
+		vertical-align: middle;
+		span {
+			white-space: nowrap;
+			position: absolute;
+			display: inline-block;
+		}
+		span.base {
+			width: 100%;
+			height: 100%;
+			padding: 0;
+		}
+		span.bar {
+			width: 100%;
+			height: 100%;
+			z-index: 0;
+			@include border-radius(1em);
+			background: #ffffff;
+			-webkit-box-shadow: inset 0px 0px 2px $slider-fill-inset;
+			box-shadow: inset 0px 0px 2px $slider-fill-inset;
+		}
+		span.fill {
+			height: 100%;
+			z-index: 0;
+			@include border-radius(1em);
+			@include linear-gradient($slider-fill,$slider-fill);
+			-webkit-box-shadow: inset 1px 1px 1px $slider-fill-inset;
+			box-shadow: inset 1px 1px 1px $slider-fill-inset;
+		}
+		span.pointer {
+			cursor: pointer;
+			width: 28px;
+			height: 28px;
+			top: -9px;
+			background-color: #fff;
+			border: 1px solid $slider-fill;
+			z-index: 2;
+			@include border-radius(1em);
+			&:after {
+				content: '';
+				background-color: $pointer;
+				width: 12px;
+				height: 12px;
+				position: absolute;
+				top: 8px;
+				left: 8px;
+				@include border-radius(1em);
+			}
+		}
+		span.pointer:hover:after {
+			background-color: $pointer-hover;
+		}
+		span.pointer.active:after {
+			background-color: $pointer-active;
+		}
+		span.bubble {
+			cursor: default;
+			top: -22px;
+			padding: 1px 3px 1px 3px;
+			font-size: 0.7em;
+			font-family: sans-serif;
+		}
+		span.bubble.selection {
+			top: 15px;
+		}
+		span.bubble.limit {
+			color: #808080;
+		}
 	}
 }
